--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>Document 2</title>
   </head>
   <body>
-    <h1>Hei Timo uudestaan!</h1>
+    <h1>Hei Timo uudestaan 99!</h1>
   </body>
 </html>
